@@ -1,3 +1,4 @@
+- fix bugs in logic deciding when aliens attack
 - fix bugs with Sengzhac log not showing and not being able to scroll over it
 - docs: document events/logs system
 - fix race condition when installing/removing shield
